--- a/styles/new-year.css
+++ b/styles/new-year.css
@@ -1,15 +1,87 @@
 /* common shared styles */
+body {
+    font-family: 'Work Sans', sans-serif;
+}
 
+.btn-primary {
+    color: #005FAC;
+    text-align: right;
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 5px;
+    background: #FFF;
+    border: 0;
+    font-size: 20px;
+    padding: 21px 25px 20px 26px;
+    margin-left: 400px;
+    margin-top: 25px;
+}
 
 
 /* Header related styles */
+.header {
+    background-image: url('../images/banner/banner3.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.banner {
+    width: 33.33%;
+    padding: 200px 100px 200px 900px;
+
+}
+
+.banner-title {
+    color: #FFF;
+    text-align: right;
+    font-size: 65px;
+    font-weight: 700;
+}
+
+.banner-description {
+    color: #FFF;
+    text-align: right;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+
 
 
 
 /* main section styles */
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+main section {
+    margin-top: 130px;
+}
 
 
-/* about section styles */
+/* failures section styles */
+.failures {
+    justify-content: space-between;
+    gap: 150px;
+    display: flex;
+}
+
+.section-title {
+    color: #151414;
+    font-size: 40px;
+    font-weight: 700;
+    padding-top: 240px;
+}
+
+.section-description{
+    color:#444343;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+
+}
 
 
 /* footer styles */
